--- a/Portifolio/style.css
+++ b/Portifolio/style.css
@@ -1,9 +1,78 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+    font-family: 'Montserrat', sans-serif; 
+    background-image: linear-gradient(to left bottom, #cecece, #f3eff0, #f2f0f1, #f2f1f2, #f2f2f2); 
+      
+    
 }
 
-.divCenter{
+h1, h2, h3, h4, h5, h6{
+    color: #11a36a
+}
+
+
+p {
+    font-weight: 500;
+}
+
+.header{
+    background-color: #11a36a;    
+    overflow: hidden;  
+    padding: 15px 10px;
+    margin-bottom: 100px;
+}
+
+.header-right{
+    float:right;
+    padding: 0px 20px;    
+}
+.header a {
+    float: left;
+    color: black;
     text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 15px;  
+    
+  }
+
+.divBlock{
+    display:block;    
+}
+
+.p-20{
+    padding: 20px;
+}
+
+.placeCenter{
+    place-content: center;
+}
+
+.center{
+    text-align-last: center;
+    
+}
+
+.hero-divBlock{
+    display:block;   
+    margin-left: 20px;
+}
+
+.hero-img{
+
+    border-radius: 100%;
+    width: 150px;
+
+}
+
+
+.divInBlock{
+    display: inline-block;
+}
+
+
+.divFlex{
+    display: flex;
 }
 
 .divLeft{
@@ -12,9 +81,38 @@ body{
 
 .textDescription{
     
-    text-align: justify;
+  padding: 30px;
 }
 
-.marginGeneral {
-    margin: 20px 70px 0;
+.footer i {
+    padding: 10px;
+    font-size: 30px;
 }
+
+.footer a{
+    text-decoration: none;
+    color: black;
+}
+
+.footer h4{
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+
+#divSkills div{
+    padding: 0 ;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+
+#sobre span a {
+    text-decoration: none;
+    color: #11a36a;
+    font-weight: 600;
+}
+
+
+
+  
